# ycx_rf_amplifiers

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: run-tests.yml
.trunk/: trunk.yaml
docs/s-params/: Max_available_gain.md  max_available_gain.md
docs/s_params/: rollett_stability.md  simultaneous_conjugate_match.md
docs/y-params/: linvill_stability.md  max_available_gain.md  stern_stability.md
docs/y_params/: simultaneous_conjugate_match.md
tests/: test_y_mag.py
tests/models/: test_common_emitter.py
tests/s_params/: test_rollett.py  test_s_mag.py  test_simultaneous_conjugate.py
tests/y_params/: test_linvill.py  test_simultaneous_conjugate.py  test_stern.py  test_y_mag.py
ycx_rf_amplifiers/models/: __init__.py  common_emitter.py
ycx_rf_amplifiers/s_params/: __init__.py  matrix_utils.py  max_available_gain.py  rollett_stability.py  simultaneous_conjugate_match.py
ycx_rf_amplifiers/y_params/: __init__.py  linvill_stability.py  max_available_gain.py  simultaneous_conjugate_match.py  stern_stability.py
